# bookgen

./: .gitignore  Pipfile  README.md  bookgen  bookgen.py  include.py  make_pdf.sh  mdenc.css  mermaid.py  pyproject.toml  requrements.txt  template.html  test.md
doc/: main.md  notebook.ipynb
doc_build/: index.html  pygments.css
