[project]
name = "bookgen"
version = "0.1.0"
description = "Book generator based on markdown syntax"
readme = "README.md"
authors = [
    {name = "Dmitri Babaev", email = "dmitri.babaev@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
    "nbconvert>5",
    "Markdown>=2.6,<3.2",
    "notebook>7",
]

[dependency-groups]
dev = [
    "pylint",
    "matplotlib>3",
    "pandas",
]

[project.scripts]
bookgen = "bookgen"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py38" 
